--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,8 +2,13 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=true
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+browser.autorefresh.Chromium.INTEGRATED=true
+browser.highlightselection.Chromium.INTEGRATED=true
 config.folder=
 file.reference.projects-blueplan=.
+file.reference.www-blueplan=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.projects-blueplan}
+start.file=index.html
 test.folder=
+web.context.root=/blueplan
